2000-07-06  Raja R Harinath  <harinath@cs.umn.edu>

	* aclang.m4 (AC_LANG_INT_SAVE(C++)): Be a copy of
	AC_LANG_INT_SAVE(C), not AC_LANG_INT_SAVE_TRY(C).
	Fixes Autoconf PR/133.

2000-07-06  Mo DeJong  <mdejong@cygnus.com>

	* acgeneral.m4 (_AC_INIT_PARSE_ARGS, AC_CHECK_TOOLS): Change
	warning message printed when only --host is given. Fix printing
	of multiple compiler cache values, use PATH argument.
	* aclang.m4 (AC_LANG_COMPILER_WORKS): Print the cross compile
	status, fix problem where two results were printed at once.

2000-07-06  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_SHELL_TMPDIR): Typo.

2000-07-06  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* acgeneral.m4 (_AC_SHELL_DIRNAME): Behave properly when the
	argument has trailing slashes, and when its depth is just one
	(`/tmp').

2000-07-06  Lars J. Aas  <larsa@sim.no>

	* acgeneral.m4 (_AC_SHELL_DIRNAME): New macro.
	(_AC_OUTPUT_FILES, _AC_OUTPUT_HEADERS, _AC_OUTPUT_LINKS):
	Use _AC_SHELL_DIRNAME.

2000-07-06 Martin Wilck <martin@tropos.de>

	* aclang.m4 (AC_PROG_F77): Add two compilers,
	lf95 (Lahey/Fujitsu Fortran) and pgf77 (Portland Group Fortran)
	(_AC_PROG_F77_G): Some Fortran compilers produce stdout/stderr
	output even if no errors occur - check exit status rather than
	output.

2000-07-05  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_SHELL_TMPDIR): When using `mktemp -d', be sure
	that the directory was created: under Ultrix 4.3 it just returns
	a name, but does not create the directory.
	Reported by Christian Krackowizer.

2000-07-03  Lars J. Aas  <larsa@sim.no>

	* acgeneral.m4 (AC_SHELL_MKDIR_P): New macro.
	(_AC_OUTPUT_FILES, _AC_OUTPUT_HEADERS, _AC_OUTPUT_LINKS,
	AC_PROG_INSTALL): Use AC_SHELL_MKDIR_P.
	* tests/base.m4 (AC_SHELL_MKDIR_P): Test it.

2000-07-04  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_CACHE_LOAD): Be ready to read the cache even
	when `.' is not in the PATH.
	* doc/install.texi (configure Invocation): Adjust.
